######################################################################################
### 1) Where do we go now ?!?
######################################################################################

ADD_SUBDIRECTORY(OneMax)
ADD_SUBDIRECTORY(NKLandscapes)

######################################################################################
