######################################################################################
### 1) Where do we go now ?!?
######################################################################################

INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

ADD_SUBDIRECTORY(boost)

######################################################################################
