SET(SOURCES
  t-test
  t-Thread
  t-mpi-persistent
  )

# SET(CMAKE_CXX_COMPILER ${MPI_CXX_COMPILER})

LINK_LIBRARIES(${MPI_CXX_LIBRARIES} ${EO_LIBRARIES} ${PROJECT_NAME})

FOREACH(current ${SOURCES})
  ADD_EXECUTABLE(${current} ${current}.cpp)
  ADD_TEST(${current} ${current})
  # TARGET_LINK_LIBRARIES(${current} ${EO_LIBRARIES} ${MPI_CXX_LIBRARIES})
  # TARGET_LINK_LIBRARIES(${current} ${EO_LIBRARIES} ${PYTHON_LIBRARIES})
ENDFOREACH()
