######################################################################################
### 1) Where do we go now ?!?
######################################################################################

ADD_SUBDIRECTORY(mpi)

######################################################################################
