# ADD_SUBDIRECTORY(algo)
# ADD_SUBDIRECTORY(core)
# ADD_SUBDIRECTORY(evaluation)
# ADD_SUBDIRECTORY(initialization)
# ADD_SUBDIRECTORY(selection)
# ADD_SUBDIRECTORY(utils)
# ADD_SUBDIRECTORY(variation)

FILE(GLOB HDRS *.h ${PROJECT_NAME})
INSTALL(FILES ${HDRS} DESTINATION include/${PROJECT_NAME} COMPONENT headers)

FILE(GLOB SOURCES *.cpp)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
INSTALL(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION lib COMPONENT libraries)
