INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB_RECURSE HDRS *.h ${PROJECT_NAME} algo core evaluation initialization selection utils variation)
INSTALL(FILES ${HDRS} DESTINATION include/${PROJECT_NAME} COMPONENT headers)

FILE(GLOB_RECURSE SOURCES *.cpp)
ADD_LIBRARY(${PROJECT_NAME} STATIC ${SOURCES})
ADD_LIBRARY(${PROJECT_NAME}_shared SHARED ${SOURCES})
INSTALL(TARGETS ${PROJECT_NAME} ARCHIVE DESTINATION lib COMPONENT libraries)
