INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})

FILE(GLOB_RECURSE HDRS *.h ${PROJECT_NAME} algo core evaluation initialization selection utils variation)
INSTALL(FILES ${HDRS} DESTINATION include/${PROJECT_NAME} COMPONENT headers)

FILE(GLOB_RECURSE SOURCES *.cpp)

IF(ENABLE_STATIC_LIBRARY)
  ADD_LIBRARY(${PROJECT_LIB} STATIC ${SOURCES})
ELSE()
  ADD_LIBRARY(${PROJECT_LIB} SHARED ${SOURCES})
ENDIF()

# INSTALL(TARGETS ${PROJECT_LIB} ARCHIVE DESTINATION lib COMPONENT libraries)
